fix position of rating stars on mobile

--- a/app/assets/stylesheets/views/search.css.scss
+++ b/app/assets/stylesheets/views/search.css.scss
@@ -1366,7 +1366,7 @@ ul.results-list {
         margin-bottom: $gutter;
 
         .star-ratings {
-          top: 9px;
+          top: 4px;
           margin: 0;
           min-width: 58px;
 
@@ -1384,7 +1384,7 @@ ul.results-list {
 
         small {
           position: relative;
-          top: -11px;
+          top: -5px;
           margin-left: 5px;
           font-size: 10px;
         }
@@ -1454,7 +1454,7 @@ ul.results-list {
     .radio-collection {
       float: right;
       position: relative;
-      top: -10px;
+      top: -12px;
     }
 
     .filter-block {
